# stack_machine

./: Cargo.toml  README.md
src/: main.rs
