[package]
name = "stack_machine"
version = "0.1.0"
edition = "2021"
authors = ["Georgiy Ozhegov <georgiyozhegov.rs@gmail.com>"]
description = "Pure stack machine."
readme = "README.md"
repository = "https://github.com/georgiyozhegov/stack_machine.git"
license = "MIT"
keywords = ["stack-machine", "asm", "stack", "machine", "virtual"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
